# beam-runinferenceapi-sample

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
beam_runinferenceapi_sample/: mnist.py  sklearn_mnist_classification.py
tests/: test_beam_runinferenceapi_sample.py
