[tool.poetry]
name = "beam-runinferenceapi-sample"
version = "0.1.0"
description = ""
authors = ["Shunya Ueta <hurutoriya@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-beam = "^2.40.0"
scikit-learn = "^1.1.2"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^5.0.4"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
